test: ProductControllerTest, 더미데이터 및 스키마 파일 업로드